syntax = "proto3";

package api.collection;

option go_package = "github.com/I-m-Surrounded-by-IoT/backend/api/collection;collection";

import "google/api/annotations.proto";

service Collection {
  rpc CreateCollectionRecord(CollectionRecord) returns (Empty) {
    option (google.api.http) = {
      post : "/collection/record"
      body : "*"
    };
  }

  rpc ListCollectionRecord(ListCollectionRecordReq)
      returns (ListCollectionRecordResp) {
    option (google.api.http) = {
      get : "/collection/record"
    };
  }

  rpc GetDeviceStreamReport(GetDeviceStreamReportReq)
      returns (stream collection.CollectionData) {
    option (google.api.http) = {
      post : "/collection/get_device_stream_report"
      body : "*"
    };
  }

  rpc GetDeviceStreamEvent(GetDeviceStreamEventReq)
      returns (stream GetDeviceStreamEventResp) {
    option (google.api.http) = {
      post : "/collection/get_device_stream_event"
      body : "*"
    };
  }
}

message GeoPoint {
  double lat = 1; // @gotags: json:"lat"
  double lon = 2; // @gotags: json:"lon"
}

message CollectionData {
  int64 timestamp = 1;    // @gotags: json:"timestamp"
  GeoPoint geo_point = 2; // @gotags: json:"geoPoint"
  float temperature = 3;  // @gotags: json:"temperature"
}

message CollectionRecord {
  uint64 id = 1;
  uint64 device_id = 2; // @gotags: json:"deviceId"
  int64 created_at = 3; // @gotags: json:"createdAt"
  CollectionData data = 4;
}

message Empty {}

enum CollectionRecordOrder {
  TIMESTAMP = 0;
  CREATED_AT = 1;
}

enum Sort {
  DESC = 0;
  ASC = 1;
}

message ListCollectionRecordReq {
  uint64 device_id = 1;            // @gotags: form:"deviceId" json:"deviceId"
  uint64 page = 2;                 // @gotags: form:"page"
  uint64 size = 3;                 // @gotags: form:"size"
  int64 before = 4;                // @gotags: form:"before"
  int64 after = 5;                 // @gotags: form:"after"
  CollectionRecordOrder order = 6; // @gotags: form:"order"
  Sort sort = 7;                   // @gotags: form:"sort"
}

message ListCollectionRecordResp {
  repeated CollectionRecord records = 1;
  int64 total = 2;
}

message GetDeviceStreamReportReq {
  uint64 id = 1; // @gotags: form:"id"
}

message GetDeviceStreamEventReq {
  uint64 id = 1;           // @gotags: form:"id"
  string event_filter = 2; // @gotags: form:"eventFilter" json:"eventFilter"
}

message GetDeviceStreamEventResp {
  string topic = 1;    // @gotags: json:"topic"
  string message = 2;  // @gotags: json:"message"
  int64 timestamp = 3; // @gotags: json:"timestamp"
}