syntax = "proto3";

package api.email;

option go_package = "github.com/I-m-Surrounded-by-IoT/backend/api/email;email";

import "google/api/annotations.proto";

service Email {
  rpc SendEmail(SendEmailReq) returns (Empty) {
    option (google.api.http) = {
      post : "/email/send"
      body : "*"
    };
  }
}

message Empty {}

message SendEmailReq {
  repeated string to = 1;
  string subject = 2;
  string body = 3;
}
